# trainstack

./: .gitignore  .gitmodules  README.md  README_zh.md  design.md  pyproject.toml  requirements.txt  setup.py  train.py  train_async.py
docs/: README.md
docs/en/: getting_started.md  project_structure.md  training_quickstart.md
docs/zh/: commander_worker_usage.md  development_guide.md  docker_build_and_release.md  http_env_decoupling.md  project_structure.md
relay-trainer/: README.md  README_zh.md  commander_state.json  pyproject.toml
relay-trainer/configs/: launch_stack.example.yaml  launch_stack.liveweb_rl.example.yaml  launch_stack.liveweb_sft.example.yaml  run.yaml
relay-trainer/docker/: Dockerfile  entrypoint.sh
relay-trainer/lium_real_test/: min_rl.py  min_sft.py  run_rl.sh  run_sft.sh
relay-trainer/relay/: commander_app.py
relay-trainer/relay/common/: http.py  schema.py
relay-trainer/relay/worker/: ckpt.py  hf_sync.py  proc.py  relay_entry.py
relay-trainer/tests/: test_commander.py  test_worker_integration.py
relay-trainer/tools/: push_latest_to_hf.py  relayctl.py
relay-trainer/trainer_blackbox/: launch_rl.sh  launch_sft.sh  mock_trainer.py
scripts/: http_env_smoke_test.sh  liveweb_http_env_smoke_test.sh
slime/backends/fsdp_utils/: actor.py  update_weight_utils.py
slime/backends/megatron_utils/: sglang.py
slime/backends/sglang_utils/: sglang_engine.py
slime/ray/: rollout.py
trainstack_plugins/http_env/: __init__.py  adapter.py  liveweb_server.py  mock_llm_server.py  openai_generate_server.py  server.py
